Fixed panel style adding display inline-block instead of overflow auto

--- a/src/LIN3S/AdminBundle/Resources/private/scss/components/_panel.scss
+++ b/src/LIN3S/AdminBundle/Resources/private/scss/components/_panel.scss
@@ -15,8 +15,8 @@ $panel-header-border-color: $color-mercury !default;
 
 .panel {
   @extend %panel;
+  display: inline-block;
   margin-bottom: 30px;
-  overflow: auto;
   width: 100%;
 }
 
